--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,18 @@
 .history
 .lib/
 dist/*
-target/
+!/target
+/target/*
+# REMOVE generated docker files
+!/target/docker
 lib_managed/
 src_managed/
 project/boot/
 project/plugins/project/
+project/project/
+project/target/
 
 # Scala-IDE specific
 .scala_dependencies
 .worksheet
+
